<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ContactsManager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="none"></string>
	<string name="name">Name</string>
	<string name="phone">Phone</string>
	<string name="email">Email</string>
	<string name="address">Address</string>	
	<string name="save">Save</string>
	<string name="cancel">Cancel</string>
	<string name="additional">Show Additional Fields</string>
	<string name="hide_additional">Hide Additional Fields</string>
</resources>
